<resources>
	<string name="app_name">MLB Card Game</string>
	<string name="menu_settings">Settings</string>
	<string name="exhibition">Exhibition</string>
	<string name="season">Season</string>
	<string name="tournament">Tournament</string>
	<string name="settings">Settings</string>
	<string name="exit">Exit</string>
	<string name="numberOfGames">Number of Games</string>
	<string name="one">1</string>
	<string name="startGame">Start Game</string>
	<string name="three">3</string>
	<string name="five">5</string>
	<string name="seven">7</string>
	<string name="awayTeam">Away</string>
	<string name="homeTeam">Home</string>
	<string name="selectTeam">Select Team</string>
	<string name="giants">San Fransisco Giants</string>
	<string name="tigers">Detroit Tigers</string>
	<string name="overall">Overall:</string>
	<string name="cpu">CPU</string>
	<string name="user">User</string>
	<string name="back">Back</string>
	<string name="inning">Inning</string>
	<string name="outs">Outs</string>
	<string name="ab">AB</string>
	<string name="r">R</string>
	<string name="h">H</string>
	<string name="hr">HR</string>
	<string name="avg">AVG</string>
	<string name="bb">BB</string>
	<string name="so">SO</string>
	<string name="rbi">RBI</string>
	<string name="er">ER</string>
	<string name="era">ERA</string>
</resources>