<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:theme="@android:style/Theme.NoTitleBar"
    tools:context=".MainMenu" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="40sp"
        android:textColor="@android:color/black" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
         
        <Button 
            android:id="@+id/exhibitionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exhibition" />
        <Button 
            android:id="@+id/seasonButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/season" />
        <Button 
            android:id="@+id/tournamentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tournament" />
        <Button 
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings" />
        <Button 
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit" />
   </LinearLayout>

</RelativeLayout>