<?xml version="1.0" encoding="utf-8"?>
<TableRow xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/awayTableHeaderRowPitching"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
           	    <TextView
           	        android:id="@+id/awayTableHeaderTeamNamePitching"
           	        android:layout_width="wrap_content"
           	        android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:layout_weight="1"
					android:textStyle="bold"
					android:textColor="@android:color/black"
           	        android:gravity="left" />
           	    <TextView
           	        android:id="@+id/ipTableHeaderP" 
           	        android:layout_width="wrap_content"
           	        android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
           	        android:text="@string/ab"
           	        android:gravity="center"/>
           	    <TextView 
           	        android:id="@+id/hTableHeaderP" 
           	        android:layout_width="wrap_content"
           	        android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
           	        android:text="@string/h"
           	        android:gravity="center"/>
           	    <TextView 
           	        android:id="@+id/rTableHeaderP" 
           	        android:layout_width="wrap_content"
           	        android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
           	        android:text="@string/r"
           	        android:gravity="center"/>
           	    <TextView 
           	        android:id="@+id/erTableHeaderP" 
           	        android:layout_width="wrap_content"
           	        android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
           	        android:text="@string/er"
           	        android:gravity="center"/>
           	    <TextView 
           	        android:id="@+id/bbTableHeaderP" 
           	        android:layout_width="wrap_content"
           	        android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
           	        android:text="@string/bb"
           	        android:gravity="center"/>
           	    <TextView 
           	        android:id="@+id/soTableHeaderP" 
           	        android:layout_width="wrap_content"
           	        android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
           	        android:text="@string/so"
           	        android:gravity="center"/>
           	    <TextView 
           	        android:id="@+id/hrTableHeaderP" 
           	        android:layout_width="wrap_content"
           	        android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
           	        android:text="@string/hr"
           	        android:gravity="center"/>
           	    <TextView 
           	        android:id="@+id/eraTableHeaderP" 
           	        android:layout_width="wrap_content"
           	        android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:textStyle="bold"
					android:textColor="@android:color/black"
           	        android:text="@string/era"
           	        android:gravity="center"/>

</TableRow>