<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:theme="@android:style/Theme.NoTitleBar" >
            
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exhibition"
        android:textSize="40sp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/black" />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false" >
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/awayTeam"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@android:color/black" />
            
            <ImageView 
                android:id="@+id/awayTeamLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center" />
                
            
            <TextView
                android:id="@+id/awayTeamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@android:color/black" />
            
            <TextView
                android:id="@+id/awayTeamOverall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@android:color/black" />                  

            <TextView
                android:id="@+id/awayTeamControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user"
                android:textSize="15sp"
                android:textColor="@android:color/black" />                  
            
            <Button
                android:id="@+id/awaySelectTeamButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectTeam"
                android:layout_marginTop="10dp" />
            
            </LinearLayout>
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" >
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/homeTeam"
                android:gravity="center"
                android:textSize="30sp"
                android:textColor="@android:color/black" />
            
            <ImageView 
                android:id="@+id/homeTeamLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/homeTeamName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@android:color/black" />
            
            <TextView
                android:id="@+id/homeTeamOverall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="15sp"
                android:textColor="@android:color/black" />                  
                
            <TextView
                android:id="@+id/homeTeamControl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/user"
                android:textSize="15sp"
                android:textColor="@android:color/black" />                  
            
            <Button
                android:id="@+id/homeSelectTeamButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selectTeam"
                android:layout_marginTop="10dp" />
        </LinearLayout>
            
        
    </LinearLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/numberOfGames"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp" />
       		 		
	<RadioGroup 
        android:id="@+id/numberOfGames"
        android:layout_width="match_parent"
       	android:layout_height="wrap_content"
        android:orientation="horizontal" >
                
        <RadioButton
            android:id="@+id/oneGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:textColor="@android:color/black" />
        <RadioButton
            android:id="@+id/threeGameButton" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/three"
            android:textColor="@android:color/black" />	        
        <RadioButton 
            android:id="@+id/fiveGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/five"
            android:textColor="@android:color/black" />	        
        <RadioButton 
            android:id="@+id/sevenGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:textColor="@android:color/black" />	        
  		</RadioGroup>
           	    
    <Button
        android:id="@+id/startExhibitionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startGame"
        android:layout_marginTop="10dp" />
    <Button
        android:id="@+id/exitExhibitionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back" />
        
       
</LinearLayout>
    